# SSVM

include/runtime/instance/: module.h
lib/aot/: compiler.cpp
lib/interpreter/instantiate/: export.cpp  module.cpp
test/: CMakeLists.txt
test/aot/: CMakeLists.txt
test/core/: CMakeLists.txt  coreTest.cpp
